samples/_failures_safe/1761641613_8896ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc563721.c: In function ‘main’:
./samples/SAFE/__tmp_cc563721.c:157:5: error: ‘print_dist’ undeclared (first use in this function); did you mean ‘print_distances’?
  157 |     print_dist
      |     ^~~~~~~~~~
      |     print_distances
./samples/SAFE/__tmp_cc563721.c:157:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_cc563721.c:157:15: error: expected ‘;’ at end of input
  157 |     print_dist
      |               ^
      |               ;
./samples/SAFE/__tmp_cc563721.c:157:5: error: expected declaration or statement at end of input
  157 |     print_dist
      |     ^~~~~~~~~~
